Re-added event table styling Minor fixes to sidebar z-indices to prevent overlap with RES user dropdown

--- a/announcements.less
+++ b/announcements.less
@@ -6,7 +6,7 @@
 		position: absolute;
 	    top: @srbar-height + @userbar-height + @content-padding;
 	    right: @content-padding;
-	    z-index: 9001;
+	    z-index: 999;
 	    
 	    background-color: rgba(0, 0, 0, 0.8);
 	    border: 1px solid rgb(200, 0, 0);
