--- a/sidebar.less
+++ b/sidebar.less
@@ -275,7 +275,7 @@
 	#search {
 		position: relative;
 		
-		z-index: 9000;
+		z-index: 999;
 		
 		margin: -@spacer-margin-top @search-padding 0 0;
 		
