--- a/style.less
+++ b/style.less
@@ -148,6 +148,7 @@
 @events-bg: @color-black;
 @events-bg-alt: lighten(@events-bg, 2%);
 @events-bg-hover: lighten(@events-bg, 8%);
+@events-border-color: @side-border-color;
 
 @events-color: @color-light-gray;
 @events-link-color: @color-blue;
